--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -16,7 +16,7 @@ crowdar.setupStrategy = ${crowdar.setupStrategy}
 crowdar.driverHub = ${crowdar.driverHub}
 
 
-!-- custom property related to wikipedia search
+!-- properties para ingresar a CoopSol issuer
 web.base.url=${web-app.url}
-user=${user}
-pass=${pass}
+user=crowdar_test2
+pass=Crowdar387!
