--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -20,3 +20,12 @@ crowdar.driverHub = ${crowdar.driverHub}
 web.base.url=${web-app.url}
 user=crowdar_test2
 pass=Crowdar387!
+
+!-- properties nuevo usuario
+prod.apellido=Perez
+prod.nombre=Juan
+prod.dni=98777888
+prod.email=nuevo.usuario@hotmail.com
+prod.telefono=1566789023
+prod.cuit=20987778881
+prod.DID=did:ethr:0x6aaa9e35e2eaf6bfgc697646cd6738b9b5c78b96
