--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -22,10 +22,10 @@ user=crowdar_test2
 pass=Crowdar387!
 
 !-- properties nuevo usuario
-prod.apellido=Perez
-prod.nombre=Juan
-prod.dni=98777888
-prod.email=nuevo.usuario@hotmail.com
+prod.apellido=Lionel
+prod.nombre=Messi
+prod.dni=38777556
+prod.email=lionel.messi@hotmail.com
 prod.telefono=1566789023
 prod.cuit=20987778881
-prod.DID=did:ethr:0x6aaa9e35e2eaf6bfgc697646cd6738b9b5c78b96
+prod.DID=did:ethr:0x827fg078852fgc4e91c3b262a97d39bc3b9b6658
