add edit prod scenario

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -21,11 +21,21 @@ web.base.url=${web-app.url}
 user=crowdar_test2
 pass=Crowdar387!
 
-!-- properties nuevo usuario
-prod.apellido=Lionel
-prod.nombre=Messi
-prod.dni=38777556
+
+!-- properties nuevo productor
+prod.apellido=Leandro 
+prod.nombre=Paredes
+prod.dni=41858564
 prod.email=lionel.messi@hotmail.com
 prod.telefono=1566789023
 prod.cuit=20987778881
-prod.DID=did:ethr:0x827fg078852fgc4e91c3b262a97d39bc3b9b6658
+prod.DID=did:ethr:0x843fa178821fgc4e92c3b262a97d39fh3b9b6658
+
+!--properties editar productor
+prod.edit.apellido=Otamendi
+prod.edit.nombre=Nicolas
+prod.edit.dni=39457632
+prod.edit.email=messi.lionel@hotmail.com
+prod.edit.telefono=1178901234
+prod.edit.cuit=364578900
+prod.edit.DID=did:ethr:0x763fg078145pgc4e91c3b262a97d39bc3b9b6658
