--- a/src/main/resources/extent.properties
+++ b/src/main/resources/extent.properties
@@ -1,5 +1,5 @@
 extent.reporter.avent.start=true
-extent.reporter.bdd.start=false
+extent.reporter.bdd.start=true
 extent.reporter.cards.start=false
 extent.reporter.email.start=false
 extent.reporter.html.start=false
