--- a/pom.xml
+++ b/pom.xml
@@ -62,14 +62,6 @@
 				<crowdar.setupStrategy>web.DownloadLatestStrategy</crowdar.setupStrategy>
 			</properties>
 		</profile>
-		
-		<profile>
-			<id>chromeHeadless</id>
-			<properties>
-				<crowdar.projectType>WEB_CHROME</crowdar.projectType>
-				<crowdar.driver.capabilities.json_path>src/main/resources/browsers/chromeCapabilitiesGrid.json</crowdar.driver.capabilities.json_path>
-			</properties>
-		</profile>
 
 		<!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
 		<!--   Profiles related to Driver Instance petition   -->
@@ -85,6 +77,18 @@
 			</properties>
 		</profile>
 
+		<profile>
+			<id>chromeHeadless</id>
+			<properties>
+				<profileName>LocalHeadless</profileName>
+				<crowdar.projectType>WEB_CHROME</crowdar.projectType>
+				<cucumber.runner>testng.xml</cucumber.runner>
+				<crowdar.setupStrategy>web.DownloadLatestStrategy</crowdar.setupStrategy>
+				<crowdar.json.path>src/test/resources/json/</crowdar.json.path>
+				<crowdar.driver.capabilities.json_path>src/main/resources/browsers/chromeCapabilitiesGrid.json</crowdar.driver.capabilities.json_path>
+<!--				<cucumber.reporters>&#45;&#45;plugin pretty &#45;&#45;plugin lippia.web.reporters.CucumberReporter: </cucumber.reporters>-->
+			</properties>
+		</profile>
 				
 		<profile> 
 			<id>stack_local</id>
