--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,46 +1,29 @@
-name: Manual Ejecution
-on:
-  workflow_dispatch:    
-    inputs:
-      tag:        
-        description: 'Tag'        
-        default: '@Smoke'        
-        required: true
+name: Workflow Web Auto
 
-jobs:  
-  Build:    
+on: 
+ push:
+  branches: [ 'develop' ]
+
+jobs:
+  
+  testing:
     runs-on: ubuntu-latest
+    container: crowdar/lippia:3.1.2.2
+    env: 
+      TAG: "@Smoke"
+      TESTTYPE: "sequential"
+      #LANG: "@EN"
+      BROWSERTYPE: "chromeHeadless"
+    
     steps:
-    - name: Step 1 - Checkout main branch de GitHub
-      uses: actions/checkout@v2
-      
-    - name: Step 2 - Compiling maven dependencies
-      run: mvn install -DskipTests
-      
-  Testing:    
-    runs-on: ubuntu-latest
-    needs: Build    
-    steps:    
-    - name: Step 1 - Checkout main branch de GitHub
-      uses: actions/checkout@v2
-      
-    - name: Step 2 - Set up JDK 15.0.2
-      uses: actions/setup-java@v1
+    - uses: actions/checkout@v3
+    - name: valores de las variables de entorno
+      run: echo "TAG= "$TAG,
+                "TESTTYPE= "$TESTTYPE,
+                "BROWSERTYPE= "$BROWSERTYPE
+    - name: Realizando Pruebas
+      run: mvn clean test -P$TESTTYPE -P$BROWSERTYPE -Dcucumber.tags="--tags $TAG"
+    - name: Subiendo informe
+      uses: actions/upload-artifact@v3
       with:
-        java-version: 15.0.2
-
-    - name: Step 3 - Download and install Google Chrome latest
-      run: |
-        wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-        sudo apt install ./google-chrome-stable_current_amd64.deb
-
-      
-    - name: Step 4 - Executing Automated Tests
-      run: mvn test -Pheadless -Pchrome -Pstaging2 -Dcucumber.filter.tags="${{ github.event.inputs.tag }}" 
-      
-    - name: Step 5 - Generate Artifacts
-      if: ${{ always() }}
-      uses: actions/upload-artifact@v2
-      with:
-        name: Reporte-COR-Login
-        path: target/Reports/
+        path: target/reports/
