--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -11,7 +11,7 @@ jobs:
     container: crowdar/lippia:3.1.2.2
     env: 
       TAG: "@Smoke"
-      TESTTYPE: "Secuencial"
+      TESTTYPE: "parallel"
       #LANG: "@EN"
       BROWSERTYPE: "chromeHeadless"
     
