--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     container: crowdar/lippia:3.1.2.2
     env: 
-      TAG: "@login"
+      TAG: "@MM-827"
       #LANG: "@EN"
       BROWSERTYPE: "chromeHeadless"
     
