--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     container: crowdar/lippia:3.1.2.2
     env: 
-      TAG: "@MM-827"
+      TAG: "@login"
       #LANG: "@EN"
       BROWSERTYPE: "chromeHeadless"
     
@@ -21,7 +21,8 @@ jobs:
                 "TESTTYPE= "$TESTTYPE,
                 "BROWSERTYPE= "$BROWSERTYPE
     - name: Realizando Pruebas
-      run: mvn clean test -P$BROWSERTYPE -Dcucumber.tags="--tags $TAG" && ls -a
+      run: mvn clean test -P$BROWSERTYPE -Dcucumber.tags="--tags $TAG"
+      continue-on-error: true
     - name: Subiendo informe
       uses: actions/upload-artifact@v3
       with:
